Add páginas finais de histórico e resumo e algumas novas funções .js

--- a/html/cartao.html
+++ b/html/cartao.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
-   <script src="validacao.js"></script>
+   <script src="../js/validacao.js"></script>
     <title>Cartao</title>
 </head>
 <style>
@@ -18,7 +18,7 @@
 
 <body>
     
-    <div class="logo"><img src="logo.png" width="200px" ></div><br>
+    <div class="logo"><img src="../imagens/logo.png" width="200px" ></div><br>
     <div class="margem">
     <p id ="cartaoV">Numero do cartão:</p>
     <input type="text" class="borda-input" id="cartao" oninput="numCartao()" placeholder="0000 0000 0000 0000"><br><br>
