--- a/html/areaPagamento.html
+++ b/html/areaPagamento.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
-   <script src="validacao.js"></script>
+   <script src="../js/validacao.js"></script>
+   
     <title>Area de pagamento</title>
 </head>
 <style>
@@ -17,7 +18,7 @@
 </style>
 
 <body>
-    <div class="logo"><img src="logo.png" width="200px" ></div>
+    <div class="logo"><img src="../imagens/logo.png" width="200px" ></div>
     <div class="bloco-areaP">
         <div class="area-pagamento">
             <div class="titulo"><b>Área de pagamento</b></div><br>
@@ -29,14 +30,11 @@
         </div>
         <div class="forma-pagamento">
             <p>Selecione a forma de pagamento:</p><br>
-            <a href="pix.html"><img src="pix_icon_198027.png" width="20px" alt=""> Pix</a><br><br>
-            <a href="cartao.html"><img src="creditcard_payment_4578.png" width="20px" alt=""> Cartão de crédito</a><br><br>
-            <a href="cartao.html"><img src="creditcard_payment_4578.png" width="20px" alt=""> Cartão de débito</a><br>
+            <a href="../html/pix.html"><img src="../imagens/pix_icon_198027.png" width="20px" alt=""> Pix</a><br><br>
+            <a href="../html/cartao.html"><img src="../imagens/creditcard_payment_4578.png" width="20px" alt=""> Cartão de crédito</a><br><br>
+            <a href="../html/cartao.html"><img src="../imagens/creditcard_payment_4578.png" width="20px" alt=""> Cartão de débito</a><br>
         </div>
     </div>
-
-
-
     </div>
 </div>
 </body>
