--- a/html/enderecos.html
+++ b/html/enderecos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Endereços EB</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <style>
         body {
             background-image: none;
@@ -14,25 +14,25 @@
 </head>
 <body>
     <div class="logo">
-        <img src="logo.png" width="200px" alt="Estacione Bem Logo">
+        <img src="../imagens/logo.png" width="200px" alt="Estacione Bem Logo">
     </div>
     <main>
         <h1>Selecione o estacionamento que deseja ir: </h1>
         <div class="grid-container">
-            <div class="grid-item" data-url="estacionamento1.html">
+            <div class="grid-item" data-url="../html/estacionamento1.html">
                 <p>Estacionamento 1:<br>Rua Laranjeiras, 165<br>Savassi<br>Belo Horizonte</p>
             </div>
-            <div class="grid-item" data-url="estacionamento2.html">
+            <div class="grid-item" data-url="../html/estacionamento2.html">
                 <p>Estacionamento 2:<br>Rua José Loren, 330<br>Floramar<br>Belo Horizonte</p>
             </div>
-            <div class="grid-item" data-url="estacionamento3.html">
+            <div class="grid-item" data-url="../html/estacionamento3.html">
                 <p>Estacionamento 3:<br>Rua Inga, 205<br>Lourdes<br>Belo Horizonte</p>
             </div>
-            <div class="grid-item" data-url="estacionamento4.html">
+            <div class="grid-item" data-url="../html/estacionamento4.html">
                 <p>Estacionamento 4:<br>Rua Raul Soares, 410<br>Milionários<br>Belo Horizonte</p>
             </div>
         </div>
     </main>
-    <script src="enderecos.js"></script>
+    <script src="../js/enderecos.js"></script>
 </body>
 </html>
