--- a/html/esqueciSenha.html
+++ b/html/esqueciSenha.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="validacao.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/validacao.js"></script>
     <title>Esqueci senha</title>
 </head>
 <body>
-    <div class="logo"><img src="logo.png" width="200px" ></div>
+    <div class="logo"><img src="../imagens/logo.png" width="200px" ></div>
     <div class="blocoCentro">
         <div class="titulo"><b>Esqueci senha:</b></div><br>
         <p id="senhaV">Senha:</p>
