--- a/html/estacionamento1.html
+++ b/html/estacionamento1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estacionamento 1</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <style>
         body {
             background-image: none;
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="logo">
-        <img src="logo.png" width="200px" alt="Estacione Bem Logo">
+        <img src="../imagens/logo.png" width="200px" alt="Estacione Bem Logo">
     </div>
     <h5>Estacionamento selecionado: 1 - Rua Laranjeiras, 165, Savassi -Belo Horizonte</h5>
     <div class="container">
@@ -108,6 +108,6 @@
             <span><div class="car available"></div>Disponíveis</span>
             <span><div class="car unavailable"></div>Indisponíveis</span>
         </div>
-        <script src="estacionamento1.js"></script>
+        <script src="../js/estacionamento1.js"></script>
 </body>
 </html>
