--- a/html/historico-reservas.html
+++ b/html/historico-reservas.html
@@ -3,10 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estacionamento 1</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Histórico de Reservas</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <style>
+        main {
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        h1 {
+            margin-bottom: 0; 
+        }
+        
+        h3 {
+            margin-bottom: 0; 
+        }
+    </style>
 </head>
 <body>
     <div class="logo">
-        <img src="logo.png" width="200px" alt="Estacione Bem Logo">
+        <img src="../imagens/logo.png" width="200px" alt="Estacione Bem Logo">
     </div>
+    <main>
+        <h1>Sua reserva foi concluída com sucesso!</h1><br>
+        <h3>Histórico de reservas:</h3>
+        <div class="grid-container2" data-url="../html/resumo.html">
+            <p>RESERVAS ATIVAS</p>
+        </div>
+        <div class="grid-container3">
+            <p>RESERVAS ANTERIORES</p>
+        </div>
+    </main>
+    <script src="../js/historico-reserva.js"></script>
+</body>
