--- a/html/login.html
+++ b/html/login.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="validacao.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/validacao.js"></script>
 </head>
 <body>
-    <div class="logo"><img src="logo.png" width="200px" ></div>
+    <div class="logo"><img src="../imagens/logo.png" width="200px" ></div>
     <div class= "bloco">
     <div class="titulo"><b>Login:</b></div><br>
     <p id="emailV">Email:</p>
@@ -16,8 +16,8 @@
     <p id="senhaV">Senha:</p>
     <input type="password" class="borda-input" id="senha" oninput="validarSenha()" ><br><br>
     <button class="enviar" onclick="validarLogin()">Entrar</button><br><br>
-    <a href="esqueciSenha.html" style="color: inherit; margin-right: 25px;">Esqueci senha</a>
-    <a href="cadastro.html"style="color: inherit;">Fazer cadastro</a>
+    <a href="../html/esqueciSenha.html" style="color: inherit; margin-right: 25px;">Esqueci senha</a>
+    <a href="../html/cadastro.html"style="color: inherit;">Fazer cadastro</a>
     </div>
 </body>
 </html>
