--- a/html/pix.html
+++ b/html/pix.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
-   <script src="validacao.js"></script>
+   <script src="../js/validacao.js"></script>
     <title>Pix</title>
 </head>
 <style>
@@ -18,12 +18,12 @@
 
 <body>
     
-    <div class="logo"><img src="logo.png" width="200px" ></div><br>
+    <div class="logo"><img src="../imagens/logo.png" width="200px" ></div><br>
     <div class="margem">
     <p>Pagamento</p><br>
 
     <div class="pix-container">
-        <img src="pix_icon_198027.png" alt="" width="40px">
+        <img src="../imagens/pix_icon_198027.png" alt="" width="40px">
         <span>Pix</span>
     </div>
     <button class="enviarPix" onclick="gerarPix()">Gerar codigo</button>
